# QupyRibbon

./: MANIFEST.in  OLDsetup.py  README.md  __init__.py  fix icon profile issues.py  main.py  pyproject.toml  setup.cfg  setup.py
GUI/: Icons.py  MainWindow.py  RibbonButton.py  RibbonPane.py  RibbonTab.py  RibbonTextbox.py  RibbonWidget.py  StyleSheets.py
QupyRibbon/: __init__.py
QupyRibbon/ribbon/: Icons.py  RibbonButton.py  RibbonCombobox.py  RibbonMainWindow.py  RibbonTextbox.py  RibbonWidget.py  demo.py
QupyRibbon/src/: Icons.py  RibbonButton.py  RibbonCombobox.py  RibbonMainWindow.py  RibbonPane.py  RibbonTab.py  RibbonTextbox.py  RibbonWidget.py  __init__.py  demo.py
QupyRibbon/stylesheets/: main.css  ribbon.css
ribbon/: Icons.py  MainWindow.py  RibbonButton.py  RibbonCombobox.py  RibbonMainWindow.py  RibbonPane.py  RibbonTab.py  RibbonTextbox.py  RibbonWidget.py  StyleSheets.py  __init__.py  demo.py
src/: RibbonButton.py  RibbonCombobox.py  RibbonTab.py  RibbonWidget.py  __init__.py
