[metadata]
name = QupyRibbon
version = 0.1.0
description='QupyRibbon ribbon code'
url='https://github.com/hyperiongeo/qupyribbon'
author='Hyperion GeoServices'
author_email='hyperion.geo@gmail.com'
license='MIT'
packages=['QupyRibbon']
zip_safe=False

[options]
include_package_data = True
#[options]
#install_requires =
#    requests
#    importlib-metadata; python_version < "3.8"
    